parse_cbs.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Program: peg$parseProgram },
      peg$startRuleFunction  = peg$parseProgram,

      peg$c0 = function(style) {return style},
      peg$c1 = function(style, chars) {return chars},
      peg$c2 = function(style, chars) {
                  if (style === null) return [chars];
                  else return [style, chars];
                },
      peg$c3 = "style (",
      peg$c4 = peg$literalExpectation("style (", false),
      peg$c5 = " ",
      peg$c6 = peg$literalExpectation(" ", false),
      peg$c7 = " uses (",
      peg$c8 = peg$literalExpectation(" uses (", false),
      peg$c9 = /^[^ \r\n\t]/,
      peg$c10 = peg$classExpectation([" ", "\r", "\n", "\t"], true, false),
      peg$c11 = function(name, ref, id) {return [ref, id.join("")]},
      peg$c12 = ")",
      peg$c13 = peg$literalExpectation(")", false),
      peg$c14 = function(name, style) {return [name, style]},
      peg$c15 = function(uses) {return ["Style", uses]},
      peg$c16 = "section ",
      peg$c17 = peg$literalExpectation("section ", false),
      peg$c18 = function(cat) {return cat},
      peg$c19 = "(",
      peg$c20 = peg$literalExpectation("(", false),
      peg$c21 = function(cat, inst) {return inst},
      peg$c22 = function(cat, indiv) {return catChoice(["div", indiv, cat])},
      peg$c23 = "insert ",
      peg$c24 = peg$literalExpectation("insert ", false),
      peg$c25 = function(name) {return ["Insert", name]},
      peg$c26 = "text ",
      peg$c27 = peg$literalExpectation("text ", false),
      peg$c28 = function(cat, inpara) {return catChoice(["p", parsePara(inpara), cat])},
      peg$c29 = "header ",
      peg$c30 = peg$literalExpectation("header ", false),
      peg$c31 = function(head, cat) {return cat},
      peg$c32 = function(head, cat, inhead) {return catChoice(["h", head, inhead, cat])},
      peg$c33 = "link ",
      peg$c34 = peg$literalExpectation("link ", false),
      peg$c35 = function(link, cat) {return cat},
      peg$c36 = function(link, cat, text) {return catChoice(["a", link, text, cat])},
      peg$c37 = function(cls) {return ["class", cls]},
      peg$c38 = function(id, cls) {return ["both", id, cls]},
      peg$c39 = function(id) {return ["id", id]},
      peg$c40 = "in ",
      peg$c41 = peg$literalExpectation("in ", false),
      peg$c42 = function(cls) {return cls},
      peg$c43 = "\"",
      peg$c44 = peg$literalExpectation("\"", false),
      peg$c45 = /^[^"\n]/,
      peg$c46 = peg$classExpectation(["\"", "\n"], true, false),
      peg$c47 = function(str) {return str.join("")},
      peg$c48 = "'",
      peg$c49 = peg$literalExpectation("'", false),
      peg$c50 = /^[^'\n]/,
      peg$c51 = peg$classExpectation(["'", "\n"], true, false),
      peg$c52 = /^[^"]/,
      peg$c53 = peg$classExpectation(["\""], true, false),
      peg$c54 = /^[^']/,
      peg$c55 = peg$classExpectation(["'"], true, false),
      peg$c56 = /^[A-Za-z_]/,
      peg$c57 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c58 = function(word) {return word.join("")},
      peg$c59 = /^[0-9]/,
      peg$c60 = peg$classExpectation([["0", "9"]], false, false),
      peg$c61 = function(num) {return parseInt(num.join(""))},
      peg$c62 = "\r\n",
      peg$c63 = peg$literalExpectation("\r\n", false),
      peg$c64 = "\n",
      peg$c65 = peg$literalExpectation("\n", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseStyle();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseNewline();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c0(s2);
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseHeader();
      if (s4 === peg$FAILED) {
        s4 = peg$parseDiv();
        if (s4 === peg$FAILED) {
          s4 = peg$parseParagraph();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parseNewline();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parseNewline();
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseHeader();
          if (s4 === peg$FAILED) {
            s4 = peg$parseDiv();
            if (s4 === peg$FAILED) {
              s4 = peg$parseParagraph();
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseNewline();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseNewline();
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s4);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStyle() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNewline();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = [];
        if (input.charCodeAt(peg$currPos) === 32) {
          s6 = peg$c5;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          if (input.charCodeAt(peg$currPos) === 32) {
            s6 = peg$c5;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parseWord();
          if (s6 !== peg$FAILED) {
            if (input.substr(peg$currPos, 7) === peg$c7) {
              s7 = peg$c7;
              peg$currPos += 7;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parseNewline();
              if (s8 !== peg$FAILED) {
                s9 = [];
                s10 = peg$currPos;
                s11 = [];
                if (input.charCodeAt(peg$currPos) === 32) {
                  s12 = peg$c5;
                  peg$currPos++;
                } else {
                  s12 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c6); }
                }
                while (s12 !== peg$FAILED) {
                  s11.push(s12);
                  if (input.charCodeAt(peg$currPos) === 32) {
                    s12 = peg$c5;
                    peg$currPos++;
                  } else {
                    s12 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c6); }
                  }
                }
                if (s11 !== peg$FAILED) {
                  s12 = peg$parseWord();
                  if (s12 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 32) {
                      s13 = peg$c5;
                      peg$currPos++;
                    } else {
                      s13 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c6); }
                    }
                    if (s13 !== peg$FAILED) {
                      s14 = [];
                      if (peg$c9.test(input.charAt(peg$currPos))) {
                        s15 = input.charAt(peg$currPos);
                        peg$currPos++;
                      } else {
                        s15 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c10); }
                      }
                      if (s15 !== peg$FAILED) {
                        while (s15 !== peg$FAILED) {
                          s14.push(s15);
                          if (peg$c9.test(input.charAt(peg$currPos))) {
                            s15 = input.charAt(peg$currPos);
                            peg$currPos++;
                          } else {
                            s15 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c10); }
                          }
                        }
                      } else {
                        s14 = peg$FAILED;
                      }
                      if (s14 !== peg$FAILED) {
                        s15 = peg$parseNewline();
                        if (s15 !== peg$FAILED) {
                          peg$savedPos = s10;
                          s11 = peg$c11(s6, s12, s14);
                          s10 = s11;
                        } else {
                          peg$currPos = s10;
                          s10 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s10;
                        s10 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s10;
                      s10 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s10;
                    s10 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s10;
                  s10 = peg$FAILED;
                }
                if (s10 !== peg$FAILED) {
                  while (s10 !== peg$FAILED) {
                    s9.push(s10);
                    s10 = peg$currPos;
                    s11 = [];
                    if (input.charCodeAt(peg$currPos) === 32) {
                      s12 = peg$c5;
                      peg$currPos++;
                    } else {
                      s12 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c6); }
                    }
                    while (s12 !== peg$FAILED) {
                      s11.push(s12);
                      if (input.charCodeAt(peg$currPos) === 32) {
                        s12 = peg$c5;
                        peg$currPos++;
                      } else {
                        s12 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                    }
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseWord();
                      if (s12 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 32) {
                          s13 = peg$c5;
                          peg$currPos++;
                        } else {
                          s13 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c6); }
                        }
                        if (s13 !== peg$FAILED) {
                          s14 = [];
                          if (peg$c9.test(input.charAt(peg$currPos))) {
                            s15 = input.charAt(peg$currPos);
                            peg$currPos++;
                          } else {
                            s15 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c10); }
                          }
                          if (s15 !== peg$FAILED) {
                            while (s15 !== peg$FAILED) {
                              s14.push(s15);
                              if (peg$c9.test(input.charAt(peg$currPos))) {
                                s15 = input.charAt(peg$currPos);
                                peg$currPos++;
                              } else {
                                s15 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c10); }
                              }
                            }
                          } else {
                            s14 = peg$FAILED;
                          }
                          if (s14 !== peg$FAILED) {
                            s15 = peg$parseNewline();
                            if (s15 !== peg$FAILED) {
                              peg$savedPos = s10;
                              s11 = peg$c11(s6, s12, s14);
                              s10 = s11;
                            } else {
                              peg$currPos = s10;
                              s10 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s10;
                            s10 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s10;
                          s10 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s10;
                        s10 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s10;
                      s10 = peg$FAILED;
                    }
                  }
                } else {
                  s9 = peg$FAILED;
                }
                if (s9 !== peg$FAILED) {
                  s10 = [];
                  if (input.charCodeAt(peg$currPos) === 32) {
                    s11 = peg$c5;
                    peg$currPos++;
                  } else {
                    s11 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c6); }
                  }
                  while (s11 !== peg$FAILED) {
                    s10.push(s11);
                    if (input.charCodeAt(peg$currPos) === 32) {
                      s11 = peg$c5;
                      peg$currPos++;
                    } else {
                      s11 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c6); }
                    }
                  }
                  if (s10 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s11 = peg$c12;
                      peg$currPos++;
                    } else {
                      s11 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c13); }
                    }
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseNewline();
                      if (s12 !== peg$FAILED) {
                        peg$savedPos = s4;
                        s5 = peg$c14(s6, s9);
                        s4 = s5;
                      } else {
                        peg$currPos = s4;
                        s4 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = [];
            if (input.charCodeAt(peg$currPos) === 32) {
              s6 = peg$c5;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              if (input.charCodeAt(peg$currPos) === 32) {
                s6 = peg$c5;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWord();
              if (s6 !== peg$FAILED) {
                if (input.substr(peg$currPos, 7) === peg$c7) {
                  s7 = peg$c7;
                  peg$currPos += 7;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseNewline();
                  if (s8 !== peg$FAILED) {
                    s9 = [];
                    s10 = peg$currPos;
                    s11 = [];
                    if (input.charCodeAt(peg$currPos) === 32) {
                      s12 = peg$c5;
                      peg$currPos++;
                    } else {
                      s12 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c6); }
                    }
                    while (s12 !== peg$FAILED) {
                      s11.push(s12);
                      if (input.charCodeAt(peg$currPos) === 32) {
                        s12 = peg$c5;
                        peg$currPos++;
                      } else {
                        s12 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                    }
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseWord();
                      if (s12 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 32) {
                          s13 = peg$c5;
                          peg$currPos++;
                        } else {
                          s13 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c6); }
                        }
                        if (s13 !== peg$FAILED) {
                          s14 = [];
                          if (peg$c9.test(input.charAt(peg$currPos))) {
                            s15 = input.charAt(peg$currPos);
                            peg$currPos++;
                          } else {
                            s15 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c10); }
                          }
                          if (s15 !== peg$FAILED) {
                            while (s15 !== peg$FAILED) {
                              s14.push(s15);
                              if (peg$c9.test(input.charAt(peg$currPos))) {
                                s15 = input.charAt(peg$currPos);
                                peg$currPos++;
                              } else {
                                s15 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c10); }
                              }
                            }
                          } else {
                            s14 = peg$FAILED;
                          }
                          if (s14 !== peg$FAILED) {
                            s15 = peg$parseNewline();
                            if (s15 !== peg$FAILED) {
                              peg$savedPos = s10;
                              s11 = peg$c11(s6, s12, s14);
                              s10 = s11;
                            } else {
                              peg$currPos = s10;
                              s10 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s10;
                            s10 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s10;
                          s10 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s10;
                        s10 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s10;
                      s10 = peg$FAILED;
                    }
                    if (s10 !== peg$FAILED) {
                      while (s10 !== peg$FAILED) {
                        s9.push(s10);
                        s10 = peg$currPos;
                        s11 = [];
                        if (input.charCodeAt(peg$currPos) === 32) {
                          s12 = peg$c5;
                          peg$currPos++;
                        } else {
                          s12 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c6); }
                        }
                        while (s12 !== peg$FAILED) {
                          s11.push(s12);
                          if (input.charCodeAt(peg$currPos) === 32) {
                            s12 = peg$c5;
                            peg$currPos++;
                          } else {
                            s12 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c6); }
                          }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parseWord();
                          if (s12 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 32) {
                              s13 = peg$c5;
                              peg$currPos++;
                            } else {
                              s13 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c6); }
                            }
                            if (s13 !== peg$FAILED) {
                              s14 = [];
                              if (peg$c9.test(input.charAt(peg$currPos))) {
                                s15 = input.charAt(peg$currPos);
                                peg$currPos++;
                              } else {
                                s15 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c10); }
                              }
                              if (s15 !== peg$FAILED) {
                                while (s15 !== peg$FAILED) {
                                  s14.push(s15);
                                  if (peg$c9.test(input.charAt(peg$currPos))) {
                                    s15 = input.charAt(peg$currPos);
                                    peg$currPos++;
                                  } else {
                                    s15 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                                  }
                                }
                              } else {
                                s14 = peg$FAILED;
                              }
                              if (s14 !== peg$FAILED) {
                                s15 = peg$parseNewline();
                                if (s15 !== peg$FAILED) {
                                  peg$savedPos = s10;
                                  s11 = peg$c11(s6, s12, s14);
                                  s10 = s11;
                                } else {
                                  peg$currPos = s10;
                                  s10 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s10;
                                s10 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s10;
                              s10 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s10;
                            s10 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s10;
                          s10 = peg$FAILED;
                        }
                      }
                    } else {
                      s9 = peg$FAILED;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = [];
                      if (input.charCodeAt(peg$currPos) === 32) {
                        s11 = peg$c5;
                        peg$currPos++;
                      } else {
                        s11 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                      while (s11 !== peg$FAILED) {
                        s10.push(s11);
                        if (input.charCodeAt(peg$currPos) === 32) {
                          s11 = peg$c5;
                          peg$currPos++;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c6); }
                        }
                      }
                      if (s10 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 41) {
                          s11 = peg$c12;
                          peg$currPos++;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c13); }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parseNewline();
                          if (s12 !== peg$FAILED) {
                            peg$savedPos = s4;
                            s5 = peg$c14(s6, s9);
                            s4 = s5;
                          } else {
                            peg$currPos = s4;
                            s4 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s4;
                          s4 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s4;
                        s4 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c12;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDiv() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
